[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/combat/combat_ui/combat_interface.gd" type="Script" id=1]
[ext_resource path="res://resources/combat/combat_ui/UIBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/combat/combat_ui/DBox/DialogueBox.tscn" type="PackedScene" id=3]



[node name="combatInterface" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="UIBox" parent="." index="0" instance=ExtResource( 2 )]

[node name="DialogueBox" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 815.837, 424.552 )

[connection signal="display_text" from="." to="DialogueBox" method="_on_combatInterface_display_text"]

[connection signal="get_ready" from="." to="UIBox" method="_on_Combat_UI_get_ready"]

[connection signal="btnPressed" from="UIBox" to="." method="_on_UIBox_btnPressed"]


